--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute; z-index: 1"/>
+        <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute;"/>
 
-        <div class="container" style="position: relative; z-index: 2">
-            <header class="main">
+        <div class="container" style="position: relative;">
+            <header class="main signed">
                 <a href="index.html" class="logo left">
                     <img src="images/logo.png" alt="e-cash converter">
                     <strong>iKoruna</strong>
@@ -51,11 +51,13 @@
 
                     <div class="clear"></div>
 
-                    <a href="#" class="button green submit">
-                        <span class="left"></span>
-                        <span class="text">Sign in</span>
-                        <span class="right"></span>
-                    </a>
+                    <div class="login">
+                        <a href="#" class="button green submit">
+                            <span class="left"></span>
+                            <span class="text">Sign in</span>
+                            <span class="right"></span>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="clear"></div>
