--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <title>iKoruna</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="Petr Brabač <brabac.petr@gmail.com>">
+    <meta name="author" content="Petr Brabačgmail.com>">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Styles -->
     <link href="css/normalize.css" rel="stylesheet">
@@ -29,9 +29,9 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute; z-index: 1"/>
+        <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute;"/>
 
-        <div class="container" style="position: relative; z-index: 2">
+        <div class="container" style="position: relative;">
             <header class="main">
                 <a href="index.html" class="logo left">
                     <img src="images/logo.png" alt="e-cash converter">
@@ -50,12 +50,13 @@
                     </form>
 
                     <div class="clear"></div>
-
-                    <a href="#" class="button green submit">
-                        <span class="left"></span>
-                        <span class="text">Sign in</span>
-                        <span class="right"></span>
-                    </a>
+                    <div class="login">
+                        <a href="#" class="button green submit">
+                            <span class="left"></span>
+                            <span class="text">Sign in</span>
+                            <span class="right"></span>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="clear"></div>
